@@ -33,7 +33,6 @@ namespace CIAO
   class Container;
   typedef Container *Container_ptr;
 
-
   /**
    * @class Home_Servant_Impl
    *
@@ -60,10 +59,10 @@ namespace CIAO
     virtual void remove_component (Components::CCMObject_ptr comp);
 
     // Operations for keyless home interface.
-    virtual ::Components::CCMObject_ptr create_component ();
+    virtual ::Components::CCMObject_ptr create_component (void);
 
     // Operations for implicit home interface.
-    virtual typename COMP_SVNT::_stub_ptr_type create ();
+    virtual typename COMP_SVNT::_stub_ptr_type create (void);
 
     virtual void update_component_map (PortableServer::ObjectId &oid);
 
