@@ -1,0 +1,106 @@
+// $Id$
+
+project(TwoTemplArgs_idl_gen) : componentidldefaults {
+  custom_only = 1
+  idlflags += -Gex \
+              -Wb,stub_export_macro=TWOTEMPLARGS_STUB_Export \
+              -Wb,stub_export_include=TwoTemplArgs_stub_export.h \
+              -Wb,skel_export_macro=TWOTEMPLARGS_SVNT_Export \
+              -Wb,skel_export_include=TwoTemplArgs_svnt_export.h \
+              -Wb,svnt_export_macro=TWOTEMPLARGS_SVNT_Export \
+              -Wb,svnt_export_include=TwoTemplArgs_svnt_export.h \
+              -Wb,exec_export_macro=TWOTEMPLARGS_EXEC_Export \
+              -Wb,exec_export_include=TwoTemplArgs_exec_export.h
+
+  IDL_Files {
+    TwoTemplArgs.idl
+  }
+}
+
+project(TwoTemplArgs_lem_gen) : ciaoidldefaults {
+  after += TwoTemplArgs_idl_gen
+  custom_only = 1
+  idlflags += -Wb,export_macro=TWOTEMPLARGS_EXEC_Export \
+              -Wb,export_include=TwoTemplArgs_exec_export.h \
+              -SS
+
+  IDL_Files {
+    TwoTemplArgsE.idl
+  }
+}
+
+project(TwoTemplArgs_stub) : ccm_stub {
+  after += TwoTemplArgs_idl_gen
+
+  sharedname = TwoTemplArgs_stub
+  dynamicflags   = TWOTEMPLARGS_STUB_BUILD_DLL
+
+  IDL_Files {
+  }
+
+  Source_Files {
+    TwoTemplArgsC.cpp
+  }
+
+  Header_Files {
+    TwoTemplArgsC.h
+    TwoTemplArgs_stub_export.h
+  }
+
+  Inline_Files {
+    TwoTemplArgsC.inl
+  }
+}
+
+project(TwoTemplArgs_exec) : ciao_executor {
+  after   += TwoTemplArgs_lem_gen TwoTemplArgs_stub
+  sharedname = TwoTemplArgs_exec
+  libs += TwoTemplArgs_stub
+
+  dynamicflags   = TWOTEMPLARGS_EXEC_BUILD_DLL
+
+  IDL_Files {
+  }
+
+  Source_Files {
+    TwoTemplArgsEC.cpp
+    TwoTemplArgs_exec.cpp
+  }
+
+  Header_Files {
+    TwoTemplArgsEC.h
+    TwoTemplArgs_exec.h
+    TwoTemplArgs_exec_export.h
+  }
+
+  Inline_Files {
+    TwoTemplArgsEC.inl
+  }
+}
+
+project(TwoTemplArgs_svnt) : ciao_servant {
+  after      += TwoTemplArgs_exec
+  sharedname  = TwoTemplArgs_svnt
+  libs       += TwoTemplArgs_exec \
+                TwoTemplArgs_stub
+
+  dynamicflags = TWOTEMPLARGS_SVNT_BUILD_DLL
+
+  IDL_Files {
+  }
+
+  Source_Files {
+    TwoTemplArgsS.cpp
+    TwoTemplArgs_svnt.cpp
+  }
+
+  Header_Files {
+    TwoTemplArgsS.h
+    TwoTemplArgs_svnt.h
+    TwoTemplArgs_svnt_export.h
+  }
+
+  Inline_Files {
+    TwoTemplArgsS.inl
+  }
+}
